k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biddinggo-ingress
  namespace: biddinggo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: biddinggo.local
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biddinggo-frontend-service
                port:
                  number: 80
    - http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: biddinggo-backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: biddinggo-frontend-service
                port:
                  number: 80
